# Conflicts: #	pet-hotel-versions/CHANGELOG.md #	pet-hotel-versions/modgy-back-0.0.12/Modgy-0.0.12-SNAPSHOT.jar #	specification/pet-hotel-pets-spec.yaml #	specification/pet-hotel-rooms-spec.yaml #	src/main/java/ru/modgy/booking/controller/BookingController.java #	src/main/java/ru/modgy/booking/service/BookingServiceImpl.java #	src/main/java/ru/modgy/owner/dto/mapper/OwnerMapper.java #	src/main/java/ru/modgy/room/dto/mapper/RoomMapper.java #	src/main/java/ru/modgy/room/service/RoomServiceImpl.java #	src/main/java/ru/modgy/user/controller/UserController.java #	src/main/java/ru/modgy/user/service/UserServiceImpl.java #	src/main/java/ru/modgy/utility/EntityService.java #	src/main/java/ru/modgy/utility/UtilityService.java #	src/test/java/ru/modgy/booking/service/BookingServiceImplTest.java #	src/test/java/ru/modgy/room/category/service/CategoryServiceImplTest.java #	src/test/java/ru/modgy/room/service/RoomServiceImplTest.java #	src/test/java/ru/modgy/user/service/UserServiceImplTest.java #	src/test/java/ru/modgy/utility/EntityServiceTest.java #	src/test/java/ru/modgy/utility/UtilityServiceTest.java